--- a/html/formulario-registro.html
+++ b/html/formulario-registro.html
@@ -1,4 +1,4 @@
-<script src="/js/formulario-registro.js"></script>
+<script src="../js/formulario-registro.js"></script>
 
 <form id="form_usuario">
     <legend>Formulario de Registro</legend>
