- se termina modificacion de perfil

--- a/html/modificacion-perfil.html
+++ b/html/modificacion-perfil.html
@@ -1,3 +1,5 @@
+<script src="../js/modificacion-perfil.js"></script>
+
 <form id="form_usuario">
     <legend>Modificación de Perfil</legend>
     <div class="form-group">
@@ -18,7 +20,7 @@
     </div>
     <div class="form-group">
         <label for="txt_fecha_nac">Fecha de Nacimiento</label>
-        <input id="txt_fecha_nac" type="date" class="form-control" value="09/03/1982"></input>
+        <input id="txt_fecha_nac" type="date" class="form-control" value="1976-07-07"></input>
     </div>
     <button type="submit" id="btn_registrar" class="btn btn-success">Modificar</button>
     <button type="reset" id="btn_limpiar" class="btn btn-primary">Limpiar</button>
