--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Andrés T.</a>
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Juan Pérez</a>
                             <ul class="dropdown-menu">
                               <li><a class="nav-link" href="html/modificacion-perfil.html">Modificación de Perfil</a></li>
                               <li><hr class="dropdown-divider"></li>
