--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,6 @@
 <br>
 <figure class="text-center">
-    <h1>Bienvenidos a OcioJuegos.com</h1>
+    <h1>Bienvenidos a OcioJuegos.com <img src="./imagenes/logo.png" width="50" height="50" alt=""></h1>
     <br>
     <blockquote class="blockquote">
       <p>Somos un grupo de amigos apasionados por el mundo de los videojuegos!</p>
@@ -11,6 +11,6 @@
       "Es peligroso viajar solo. Toma esto." <cite title="Source Title">The Legend of Zelda</cite>
     </figcaption>
     <div>
-      <img src="../imagenes/zelda2.jpg" class="img-fluid rounded mx-auto d-block" width="700" height="800">
+      <img src="../imagenes/zelda.jpg" class="img-fluid rounded mx-auto d-block" width="700" height="800">
     </div>
   </figure>
