--- a/main.html
+++ b/main.html
@@ -20,7 +20,9 @@
         
         <nav id="menu" class="navbar navbar-expand-sm bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./main.html">OcioJuegos.com</a>
+                <a class="navbar-brand icon-link" href="./main.html">
+                    <img class="logo" src="./imagenes/logo.png" width="65" height="65">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
