--- a/login.html
+++ b/login.html
@@ -38,6 +38,12 @@
                     </div>
                 </div>
             </form>
+            <br>
+            <div class="text-center">
+                <a href="#">Recuperar Contraseña</a> |
+                <a href="formulario-registro.html">Crear Usuario</a>
+                
+            </div>
 
               
         </div>
